Self host the quality selector plugin files

--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
 	<title>@ViewData["Title"] - lighttube</title>
 	<link rel="stylesheet" href="~/css/site.css"/>
 	<link rel="stylesheet" href="~/css/videojs/video-js.css"/>
+	<link rel="stylesheet" href="~/css/videojs/quality-selector.css"/>
 	<link rel="stylesheet" href="~/css/videojs/tube.css"/>
-	<link href="https://unpkg.com/@("@silvermine")/videojs-quality-selector/dist/css/quality-selector.css" rel="stylesheet">
 	<link rel="icon" href="~/favicon.ico">
 </head>
 <body>
