--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -118,8 +118,8 @@
 	</div>
 </div>
 
+<script src="~/js/videojs/videojs-quality-selector.js"></script>
 <script src="~/js/videojs/video.js"></script>
-<script src="https://unpkg.com/@("@silvermine")/videojs-quality-selector/dist/js/silvermine-videojs-quality-selector.min.js"></script>
 <script>
 const player = videojs('player', {
 	controlBar: {
