--- a/LightTube/wwwroot/css/site.css
+++ b/LightTube/wwwroot/css/site.css
@@ -310,3 +310,106 @@ video, #player {
   display: flex;
   flex-direction: row;
 }
+
+.playlist-container {
+  display: flex;
+}
+
+.playlist-info {
+  width: 360px;
+  padding: 24px;
+}
+
+.playlist-thumbnail {
+  min-width: 312px;
+  max-width: 312px;
+  height: fit-content;
+  aspect-ratio: 16 / 9;
+}
+
+.playlist-video {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid #0005;
+  column-gap: 1rem;
+  align-items: center;
+  cursor: pointer;
+}
+
+.playlist-video > * {
+  flex-grow: 1;
+}
+
+.playlist-video > .thumbnail {
+  min-width: 120px;
+  max-width: 120px;
+  height: fit-content;
+  aspect-ratio: 16 / 9;
+  background-size: contain;
+  flex-basis: 200px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.playlist-video > .thumbnail.avatar {
+  justify-content: center;
+  align-items: center;
+}
+
+.playlist-video > .thumbnail.avatar > img {
+  border-radius: 50%;
+}
+
+.playlist-video > .thumbnail.thumbnail-playlist {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.playlist-video > .thumbnail > span {
+  margin: 5px;
+  background-color: #000D;
+  padding: 3px;
+}
+
+.playlist-video > .thumbnail > div {
+  height: 100%;
+  width: 40%;
+  vertical-align: center;
+  background-color: #000D;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.playlist-video > .info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+
+.playlist-video > .info > .title {
+  max-lines: 2;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.playlist-video > .info > .uploader {
+  max-lines: 1;
+  overflow: hidden;
+  text-decoration: none;
+}
+
+.video-index {
+  max-width: 5rem;
+  min-width: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
