--- a/LightTube/wwwroot/css/videojs/tube.css
+++ b/LightTube/wwwroot/css/videojs/tube.css
@@ -223,21 +223,17 @@
 }
 
 .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-content {
-    background-color: transparent;
+    background-color: #000a;
     width: 12em;
     left: -1.5em;
-    padding-bottom: .5em
 }
 
 .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-item, .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-title {
-    background-color: #151b17;
-    margin: .3em 0;
     padding: .5em;
-    border-radius: .3em
 }
 
 .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-item.vjs-selected {
-    background-color: #2483d5
+    background-color: #fff
 }
 
 .video-js .vjs-big-play-button {
