--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -6,23 +6,50 @@
 @{
 	ViewBag.Title = Model.Player.Title;
 	Layout = "_Layout";
-	Model.Resolution ??= Model.Player.Formats.First().FormatNote;
+	try
+	{
+		Model.Resolution ??= Model.Player.Formats.First().FormatNote;
+	}
+	catch
+	{
+		
+	}
 }
 
 <!-- TODO: chapters -->
 <div class="video-page-container">
 	<div class="video-container">
-		<video id="player" class="video-js" src="/proxy?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.Last().Url" controls>
-			@foreach (AdaptiveFormat format in Model.Player.Formats.Reverse())
-			{
-				<source label='@format.FormatNote' src='/proxy?url=@HttpUtility.UrlEncode(format.Url.ToString())' type='video/mp4'>
-			}
-			
-			@foreach (Subtitle subtitle in Model.Player.Subtitles)
-			{
-				<track src="/subtitle_proxy?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
-			}
-		</video>
+		@if (Model.Player.Formats.Length > 0)
+		{
+			<video id="player" class="video-js player" src="/proxy?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.Last().Url" controls>
+				@foreach (AdaptiveFormat format in Model.Player.Formats.Reverse())
+				{
+					<source label='@format.FormatNote' src='/proxy?url=@HttpUtility.UrlEncode(format.Url.ToString())' type='video/mp4'>
+				}
+
+				@foreach (Subtitle subtitle in Model.Player.Subtitles)
+				{
+					<track src="/subtitle_proxy?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
+				}
+			</video>
+		}
+		else
+		{
+			<div id="player" class="error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
+					@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
+					{
+						<span>
+							No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
+						</span>
+					}
+					else
+					{
+						<span>
+							@Model.Player.ErrorMessage
+						</span>
+					}
+			</div>
+		}
 
 		<noscript>
 			<div class="resolutions-container">
@@ -118,31 +145,34 @@
 	</div>
 </div>
 
-<script src="~/js/videojs/video.js"></script>
-<script src="~/js/videojs/videojs-quality-selector.js"></script>
-<script>
-const player = videojs('player', {
-	controlBar: {
-		children: [
-			'playToggle',
-			'volumePanel',
-			'currentTimeDisplay',
-			'timeDivider',
-			'durationDisplay',
-			'progressControl',
-			'spacer',
-			'chaptersButton',
-			'subsCapsButton',
-			'playbackRateMenuButton',
-			'qualitySelector',
-			'pictureInPictureToggle',
-			'fullscreenToggle',
-		],
-	},
-}, function () {
-	var player = this;
-	player.on('resolutionchange', function () {
-		console.log('Source changed')
-	})
-});
-</script>
+@if (Model.Player.Formats.Length > 0)
+{
+	<script src="~/js/videojs/video.js"></script>
+	<script src="~/js/videojs/videojs-quality-selector.js"></script>
+	<script>
+	const player = videojs('player', {
+		controlBar: {
+			children: [
+				'playToggle',
+				'volumePanel',
+				'currentTimeDisplay',
+				'timeDivider',
+				'durationDisplay',
+				'progressControl',
+				'spacer',
+				'chaptersButton',
+				'subsCapsButton',
+				'playbackRateMenuButton',
+				'qualitySelector',
+				'pictureInPictureToggle',
+				'fullscreenToggle',
+			],
+		},
+	}, function () {
+		var player = this;
+		player.on('resolutionchange', function () {
+			console.log('Source changed')
+		})
+	});
+	</script>
+}
