--- a/LightTube/Views/Home/Index.cshtml
+++ b/LightTube/Views/Home/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<string>
 @{
+	ViewBag.Metadata = new Dictionary<string, string>
+	{
+		["og:title"] = "LightTube",
+		["og:url"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}{Url.ActionContext.HttpContext.Request.Path}{Url.ActionContext.HttpContext.Request.QueryString}",
+		["og:description"] = "An alternative, privacy respecting front end for YouTube",
+	};
 	ViewData["Title"] = "Home Page";
 }
 
