--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -4,6 +4,15 @@
 @model LightTube.Contexts.PlayerContext
 
 @{
+	ViewBag.Metadata = new Dictionary<string, string>
+	{
+		["og:title"] = Model.Player.Title,
+		["og:url"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}{Url.ActionContext.HttpContext.Request.Path}{Url.ActionContext.HttpContext.Request.QueryString}",
+		["og:image"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}/proxy?url={HttpUtility.UrlEncode(Model.Player.Thumbnails.FirstOrDefault()?.Url?.ToString())}",
+		["twitter:card"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}/proxy?url={HttpUtility.UrlEncode(Model.Player.Thumbnails.LastOrDefault()?.Url?.ToString())}",
+		["og:description"] = Model.Player.Description,
+		["og:video"] = $"/proxy?url={HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())}",
+	};
 	ViewBag.Title = Model.Player.Title;
 	Layout = "_Layout";
 	bool live = Model.Player.Formats.Length == 0 && Model.Player.AdaptiveFormats.Length > 0;
@@ -193,7 +202,8 @@
         this.hotkeys({
           volumeStep: 0.1,
           seekStep: 5,
-          enableModifiersForNumbers: false
+          enableModifiersForNumbers: false,
+          enableVolumeScroll: false
         });
       });
 	</script>
