Add subscriptions, account stuff, etc, etc, big commit

--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
 		<input type="submit" value="Search">
 	</form>
 	<div class="flex-divider"></div>
+	<div class="user-info">
+		@Html.Partial("_LoginLogoutPartial")
+	</div>
 </header>
 <div class="page-container">
 @RenderBody()
