--- a/LightTube/Views/Youtube/Channel.cshtml
+++ b/LightTube/Views/Youtube/Channel.cshtml
@@ -19,6 +19,7 @@
 			<p>@Model.Channel.Subscribers</p>
 		</div>
 		<div class="flex-divider"></div>
+		<button style="display: none" class="subscribe-button" data-cid="@Model.Channel.Id"></button>
 	</div>
 	
 	<div class="channel-about">
